--- a/NUMARTISAPP/templates/base.html
+++ b/NUMARTISAPP/templates/base.html
@@ -9,6 +9,7 @@
     <meta content="" name="description">
     
     <!-- Favicon -->
+         <!-- Favicon -->
     <link href="{% static 'img/favicon.ico' %}" rel="icon">
 
     <!-- Google Web Fonts -->
