--- a/NUMARTISAPP/templates/Services.html
+++ b/NUMARTISAPP/templates/Services.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <!-- Service Start -->
+     <!-- Service Start -->
     <div class="container">
         <div class="d-flex justify-content-center mb-3 test3">
             <form method="get" action="{% url 'services' %}" class="d-flex align-items-center azert">
